--- a/rpa-certificates-of-free-sale/ali test.xaml
+++ b/rpa-certificates-of-free-sale/ali test.xaml
@@ -60,7 +60,7 @@
       <AssemblyReference>UiPath.Word</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="ali_test" sap:VirtualizedContainerService.HintSize="376,241" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="ali_test" sap:VirtualizedContainerService.HintSize="476,539" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="scg:List(snm:MailMessage)" Name="lstmsg" />
     </Sequence.Variables>
@@ -69,7 +69,9 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:GetOutlookMailMessages Account="{x:Null}" Filter="{x:Null}" TimeoutMS="{x:Null}" DisplayName="Get Outlook Mail Messages" GetAttachements="False" sap:VirtualizedContainerService.HintSize="334,22" sap2010:WorkflowViewState.IdRef="GetOutlookMailMessages_1" MailFolder="Inbox" MarkAsRead="False" Messages="[lstmsg]" OnlyUnreadMessages="False" Top="1" />
-    <ui:SaveMail DisplayName="Save Mail Message" FilePath="test.msg" sap:VirtualizedContainerService.HintSize="334,87" sap2010:WorkflowViewState.IdRef="SaveMail_1" MailMessage="[lstmsg(0)]" />
+    <ui:GetOutlookMailMessages Account="{x:Null}" Filter="{x:Null}" TimeoutMS="{x:Null}" DisplayName="Get Outlook Mail Messages" GetAttachements="False" sap:VirtualizedContainerService.HintSize="434,22" sap2010:WorkflowViewState.IdRef="GetOutlookMailMessages_1" MailFolder="Inbox" MarkAsRead="False" Messages="[lstmsg]" OnlyUnreadMessages="False" Top="1" />
+    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="434,61" sap2010:WorkflowViewState.IdRef="WriteLine_2" Text="[lstmsg(0).Subject]" />
+    <ui:SaveMail DisplayName="Save Mail Message" FilePath="test.eml" sap:VirtualizedContainerService.HintSize="434,87" sap2010:WorkflowViewState.IdRef="SaveMail_1" MailMessage="[lstmsg(0)]" />
+    <ui:CopyFile ContinueOnError="{x:Null}" Destination="test.msg" DisplayName="Copy File" sap:VirtualizedContainerService.HintSize="434,157" sap2010:WorkflowViewState.IdRef="CopyFile_1" Overwrite="False" Path="test.eml" />
   </Sequence>
 </Activity>
